--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -128,6 +128,8 @@ b~testxml.adb
 b~testxml.ads
 b~tgetparam.adb
 b~tgetparam.ads
+b~timer.adb
+b~timer.ads
 b~tlog.adb
 b~tlog.ads
 b~tmime.adb
@@ -378,6 +380,7 @@ testxml.tmp
 tgetparam
 tgetparam.res
 tgetparam.tmp
+timer.res
 tlog
 tlog.res
 tlog.tmp
