(RT_STD_SEC): Add new test cert.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -29,7 +29,7 @@ ifeq ($(MODE),ssl)
 LARGS := $(LARGS) -lssl -lcrypto
 
 RT_SOAP_SEC = test_sec_soap
-RT_STD_SEC = tsgetparam ssp ssback
+RT_STD_SEC = tsgetparam ssp ssback cert
 
 else
 # Without SSL support
