(RT_STD): Add sessions4.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -65,7 +65,8 @@ RT_STD = turl tgetparam param dummy simple tclientto shutdown strm strm2 \
 	head hval turl4 ctab file redirect hostip unexph2 sp sessions zres \
 	dirop multiple tcom tmime sessions2 sessions3 huge_response sback \
 	server_info append compress zapp zbig zfile zstrm split zstrm2 once \
-	get_post zopen timer tmem file2 eres sock1 sock2 $(RT_STD_SEC)
+	get_post zopen timer tmem file2 eres sock1 sock2 sessions4 \
+	$(RT_STD_SEC)
 
 STD_TESTS    = $(RT_STD)
 ALONE_TESTS  = $(RT_STD_ALONE)
