Change default values for most modules. Minor typo fix.

--- a/makefile.conf
+++ b/makefile.conf
@@ -18,26 +18,26 @@ GNAT_VERSION = 3.15
 # you want to use AdaSockets just uncomment the ADASOCKETS variable below and
 # set it to point to the AdaSockets install directory.
 #
-#ADASOCKETS = /usr/Ada.Libraries/adasockets
+#ADASOCKETS = /opt/adasockets
 
 ##############################################################################
 # XMLADA optional, needed if you want to build SOAP's AWS support. In this
 # case uncomment XMLADA variable and set it to point to the XMLADA install
 # directory.
 #
-#XMLADA	 = /usr/Ada.Libraries/xmlada
+#XMLADA	 = /opt/xmlada
 
 ##############################################################################
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
 # used to create a WSDL document from an Ada spec.
 #
-#ASIS	 = c:/opt/GNATPRO/3.16a1/lib/asis
+#ASIS	 = /opt/GNATPRO/5.01a/lib/asis
 
 ##############################################################################
 # POSIX optional, needed if you want to build AWS using the POSIX version of
 # AWS.OS_Lib.
 #
-#POSIX	 = /usr/Ada.Libraries/POSIX
+#POSIX	 = /opt/POSIX
 
 ##############################################################################
 # AWS support SSL (Secure Socket Layer). The SSL support is always built-in
@@ -71,7 +71,7 @@ endif
 #DEBUG	= 1
 
 ##############################################################################
-# To run regtession tests with GDB, uncomment the line below.
+# To run regression tests with GDB, uncomment the line below.
 #
 #GDB_REGTESTS = 1
 
