(ASIS): Use a more standard default value.

--- a/makefile.conf
+++ b/makefile.conf
@@ -31,7 +31,7 @@ GNAT_VERSION = 3.15
 # ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
 # used to create a WSDL document from an Ada spec.
 #
-#ASIS	 = /opt/GNATPRO/5.01a/lib/asis
+#ASIS	 = /opt/GNATPRO/lib/asis
 
 ##############################################################################
 # POSIX optional, needed if you want to build AWS using the POSIX version of
