Use libpoll.a instead of poll.o for optional linking.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -45,7 +45,7 @@ LARGS := $(LARGS) -lnosslaws
 endif
 
 ifeq (${OS}, Windows_NT)
-LARGS := $(LARGS) ../lib/poll.o
+LARGS := $(LARGS) -lpoll
 endif
 
 # SOAP regression tests
