--- a/makefile.conf
+++ b/makefile.conf
@@ -40,7 +40,7 @@ GNAT_VERSION = 3.15
 #POSIX	 = /opt/POSIX
 
 ##############################################################################
-# AWS support SSL (Secure Socket Layer). The SSL support is always built-in
+# AWS supports SSL (Secure Socket Layer). The SSL support is always built-in
 # AWS. To build AWS's demos will SSL support you need to set MODE to ssl, in
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
 # are distributed on Windows platforms therefore the SSL mode is the default
@@ -54,7 +54,7 @@ MODE=std
 endif
 
 ##############################################################################
-# AWS provide a binding to the LDAP API. This binding will use the standard
+# AWS provides a binding to the LDAP API. This binding will use the standard
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
 # set LDAP=1 below.
@@ -95,6 +95,6 @@ DLLTOOL	 	  = dlltool
 DLL2DEF		  = dll2def
 RM	 	  = rm
 MKDIR	 	  = mkdir
-CP	 	  = cp
+CP	 	  = cp -p
 MV	 	  = mv
 CHMOD	 	  = chmod
