--- a/regtests/makefile
+++ b/regtests/makefile
@@ -257,7 +257,7 @@ clean:
 	-rm -f alldifs *.log run? check_mem.run? hello_demo* *.tmp
 	-rm -f stockquoteservice* stock_quote_service*
 	-rm -f interoplab-* interoplab.ad* googlesearchservice*
-	-rm -f wsdl_?_service* wsdl4*
+	-rm -f wsdl_?_service* wsdl4* wsdl_parse_?-* wsdl_parse_?.ads
 	-rm -fr WSDL_6 wsdl_6.class file[abc].txt* zresres*
 	-rm -f test_all.adb
 	-rm -fr ../icons/test-dir1
