Add AWK definition, sort variables.

--- a/makefile.conf
+++ b/makefile.conf
@@ -83,18 +83,19 @@ INSTALL	 = $(HOME)
 ##############################################################################
 # Tools used by AWS
 AR 		  = ar
-GREP		  = grep
-SED	 	  = sed
+AWK               = awk
+CHMOD	 	  = chmod
+CP	 	  = cp -p
 DIFF	 	  = diff
-GZIP	 	  = gzip
-TAR	 	  = tar
+DLL2DEF		  = dll2def
+DLLTOOL	 	  = dlltool
 GNATMAKE	  = gnatmake
 GNATMAKE_FOR_HOST = gnatmake
-WINDRES	 	  = windres
-DLLTOOL	 	  = dlltool
-DLL2DEF		  = dll2def
-RM	 	  = rm
+GREP		  = grep
+GZIP	 	  = gzip
 MKDIR	 	  = mkdir
-CP	 	  = cp -p
 MV	 	  = mv
-CHMOD	 	  = chmod
+RM	 	  = rm
+SED	 	  = sed
+TAR	 	  = tar
+WINDRES	 	  = windres
