(SOURCES): Add containers: ai302-containers-hash_tables.adb  ai302-containers-indefinite_hashed_maps.adb  ai302-containers-prime_numbers.adb  ai302-strings-hash.adb strings_maps.ads  charles-algorithms-generic_lower_bound.adb  charles-algorithms-generic_lower_bound.ads  charles-algorithms.ads charles.ads

--- a/include/makefile
+++ b/include/makefile
@@ -17,7 +17,14 @@ SOURCES	= table_of_dynamic_keys_and_static_values_g.adb \
 	table_of_strings_and_static_values_g.adb \
 	strings_cutter.adb md5.adb \
 	memory_streams.adb zlib-thin.adb zlib.adb \
-	sha.ads sha-process_data.adb sha-strings.adb
+	sha.ads sha-process_data.adb sha-strings.adb \
+	ai302-containers-hash_tables.adb \
+	ai302-containers-indefinite_hashed_maps.adb \
+	ai302-containers-prime_numbers.adb \
+	ai302-strings-hash.adb strings_maps.ads \
+	charles-algorithms-generic_lower_bound.adb \
+	charles-algorithms-generic_lower_bound.ads \
+	charles-algorithms.ads charles.ads
 
 UNITS = $(sort $(basename $(SOURCES)))
 
