--- a/docs/makefile
+++ b/docs/makefile
@@ -60,7 +60,6 @@ APIFILES = ../src/aws.ads.texi \
 	../src/aws-templates.ads.texi \
 	../src/aws-translator.ads.texi \
 	../src/aws-url.ads.texi \
-	../src/templates_parser.ads.texi \
 	../xsrc/aws-jabber.ads.texi \
 	../soap/soap.ads.texi \
 	../soap/soap-client.ads.texi \
@@ -149,7 +148,7 @@ apiref: gnathtml_apiref
 # API cross-references using gnathtml
 gnathtml_apiref: check_api
 	(cd ..; fileset=; \
-	for file in src/a*.ad[sb] src/templates*.ad[sb] \
+	for file in src/a*.ad[sb] src/templates*.ad[sb] xsrc/*.ad* \
 	   	include/strings_cutter.ad[sb] include/zlib*.ad[sb] \
 		include/memory_streams.ad[sb] \
 		soap/soap*.ad[sb]; \
@@ -168,7 +167,7 @@ gnathtml_apiref: check_api
 # API cross-references using AdaBrowse
 adabrowse_apiref: check_api
 	(cd ..; \
-	for file in src/a*.ad[sb] src/templates*.ad[sb] \
+	for file in src/a*.ad[sb] src/templates*.ad[sb] xsrc/*.ad* \
 	   	include/strings_cutter.ad[sb] include/zlib*.ad[sb] \
 		include/memory_streams.ad[sb] \
 		soap/soap*.ad[sb]; \
